log
Thu Apr  7 15:54:06 UTC 2022: 
 tests:  0|6
total_score: 0/70
8d18cab
Thu Apr  7 16:08:40 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
4656f9f
Thu Apr  7 16:09:35 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:55:14: error: unused variable ‘M’ [-Werror=unused-variable]
     HashMap *M=(HashMap*)malloc(sizeof(HashMap));
              ^
cc1: all warnings being treated as errors
Compilation failed
6ecafaa
Thu Apr  7 16:14:42 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
ee7c4ef
Thu Apr  7 16:33:46 UTC 2022: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:14: error: ‘REMAIMER’ undeclared (first use in this function)
     m->size= REMAIMER;
              ^~~~~~~~
hashmap.c:56:14: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:58:31: error: ‘SIZE’ undeclared (first use in this function); did you mean ‘FILE’?
     m->buckets=(Pair**)malloc(SIZE*sizeof(Pair*));
                               ^~~~
                               FILE
Compilation failed
69cfe4c
Thu Apr  7 16:34:33 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:56:14: error: ‘REMAINDER’ undeclared (first use in this function)
     m->size= REMAINDER;
              ^~~~~~~~~
hashmap.c:56:14: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:58:31: error: expected expression before ‘FILE’
     m->buckets=(Pair**)malloc(FILE*sizeof(Pair*));
                               ^~~~
Compilation failed
6955544
Thu Apr  7 16:35:04 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:58:31: error: expected expression before ‘FILE’
     m->buckets=(Pair**)malloc(FILE*sizeof(Pair*));
                               ^~~~
Compilation failed
de6bf66
Thu Apr  7 16:35:25 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:58:31: error: ‘size’ undeclared (first use in this function); did you mean ‘sinl’?
     m->buckets=(Pair**)malloc(size*sizeof(Pair*));
                               ^~~~
                               sinl
hashmap.c:58:31: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
cdf8e27
Thu Apr  7 16:35:40 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
6ae9b25
Thu Apr  7 16:39:08 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
741e5d1
Fri Apr  8 01:02:05 UTC 2022: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
99242b1
Fri Apr  8 01:05:40 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a82437b
Fri Apr  8 01:25:33 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
174b96e
Fri Apr  8 02:00:15 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
e4af211
Fri Apr  8 02:13:20 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
b38dd53
Fri Apr  8 02:26:16 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f00e733
Fri Apr  8 02:30:00 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3567f78
Fri Apr  8 02:30:26 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
1d97768
Fri Apr  8 04:21:13 UTC 2022: 
 hashmap.c | 37 +++++++++++++++++++++++++++++++------
 1 file changed, 31 insertions(+), 6 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:64:7: error: statement with no effect [-Werror=unused-value]
       free m;
       ^~~~
hashmap.c:64:12: error: expected ‘;’ before ‘m’
       free m;
            ^
hashmap.c: In function ‘eraseMap’:
hashmap.c:79:27: error: ‘MAX_MAP_SIZE’ undeclared (first use in this function); did you mean ‘_T_SIZE’?
             for (i = 0; i<MAX_MAP_SIZE; i++){
                           ^~~~~~~~~~~~
                           _T_SIZE
hashmap.c:79:27: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:80:30: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
                 HashMap *p = map->buckets[i];
                              ^~~
hashmap.c:83:26: error: ‘HashMap {aka struct HashMap}’ has no member named ‘next’
                     q = p->next;
                          ^~
cc1: all warnings being treated as errors
Compilation failed
25f2049
Fri Apr  8 04:21:40 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:64:7: error: statement with no effect [-Werror=unused-value]
       free m;
       ^~~~
hashmap.c:64:12: error: expected ‘;’ before ‘m’
       free m;
            ^
hashmap.c: In function ‘eraseMap’:
hashmap.c:79:26: error: comparison between pointer and integer [-Werror]
             for (i = 0; i<key; i++){
                          ^
hashmap.c:80:30: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
                 HashMap *p = map->buckets[i];
                              ^~~
hashmap.c:83:26: error: ‘HashMap {aka struct HashMap}’ has no member named ‘next’
                     q = p->next;
                          ^~
cc1: all warnings being treated as errors
Compilation failed
d156e71
Fri Apr  8 04:26:20 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘eraseMap’:
hashmap.c:79:26: error: comparison between pointer and integer [-Werror]
             for (i = 0; i<key; i++){
                          ^
hashmap.c:80:30: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
                 HashMap *p = map->buckets[i];
                              ^~~
hashmap.c:83:26: error: ‘HashMap {aka struct HashMap}’ has no member named ‘next’
                     q = p->next;
                          ^~
cc1: all warnings being treated as errors
Compilation failed
db40bae
Fri Apr  8 04:26:52 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘eraseMap’:
hashmap.c:80:30: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
                 HashMap *p = map->buckets[i];
                              ^~~
hashmap.c:83:26: error: ‘HashMap {aka struct HashMap}’ has no member named ‘next’
                     q = p->next;
                          ^~
cc1: all warnings being treated as errors
Compilation failed
7717153
Fri Apr  8 04:28:01 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘eraseMap’:
hashmap.c:80:29: error: invalid initializer
                 HashMap p = map->buckets[i];
                             ^~~
hashmap.c:82:24: error: used struct type value where scalar is required
                 while (p) {
                        ^
hashmap.c:83:26: error: invalid type argument of ‘->’ (have ‘HashMap {aka struct HashMap}’)
                     q = p->next;
                          ^~
hashmap.c:84:22: error: invalid type argument of ‘->’ (have ‘HashMap {aka struct HashMap}’)
                     p->current = 0;
                      ^~
hashmap.c:85:23: error: incompatible types when assigning to type ‘HashMap {aka struct HashMap}’ from type ‘HashMap * {aka struct HashMap *}’
                     p = q;
                       ^
Compilation failed
e37a7ad
Fri Apr  8 04:28:36 UTC 2022: 
 hashmap.c | 20 +-------------------
 1 file changed, 1 insertion(+), 19 deletions(-)
 tests:  0|6
total_score: 0/70
0486094
Fri Apr  8 14:46:44 UTC 2022: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:64:6: error: ‘HashMap {aka struct HashMap}’ has no member named ‘loadFactor’
     m->loadFactor= (long)ceil(total*0.77);
      ^~
hashmap.c:64:31: error: ‘total’ undeclared (first use in this function)
     m->loadFactor= (long)ceil(total*0.77);
                               ^~~~~
hashmap.c:64:31: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3d06e93
Fri Apr  8 14:47:12 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:64:6: error: ‘HashMap {aka struct HashMap}’ has no member named ‘loadFactor’
     m->loadFactor= (long)ceil(capacity*0.77);
      ^~
Compilation failed
bdee5d9
Fri Apr  8 14:47:48 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
/tmp/cczGjIxo.o: In function `createMap':
test.c:(.text+0x19b): undefined reference to `ceil'
collect2: error: ld returned 1 exit status
Compilation failed
7219799
Fri Apr  8 14:48:34 UTC 2022: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
e65d26b
